--- a/Demo020_GitHub/.project
+++ b/Demo020_GitHub/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Demo020_GitHubWithSelenium</name>
+	<name>Demo020_GitHub</name>
 	<comment></comment>
 	<projects>
 	</projects>
